--- a/web/templates/naturetemp/base.html
+++ b/web/templates/naturetemp/base.html
@@ -13,21 +13,16 @@
 		<form method="post">
 			<div class="box">
 
-				<!-- <?php if ($user_data['user_name'] === 'admin'){ ?>
-					<h3>THM{XSS}</h3>
-				<?php } ?> -->
-
 				<div style="font-size: 20px;margin: 10px;color: black;">Submit user description</div>
 
-				<h3>{{ desc }}</h3>
-                <input type="hidden" value=" {{ desc }}">
+				<h3>{{ desc|safe }}</h3>
 
 				<input type="hidden" name="user_name" value="{{ username }}">
 
 				<input class="input-field" name="desc"><br><br>
 				<input class="button" type="submit" value="Submit"><br><br>
 
-				<a href="login">Logout</a>
+				<a href="logout">Logout</a>
 
 			</div>
 		</form>
