--- a/web/templates/main/index.html
+++ b/web/templates/main/index.html
@@ -22,7 +22,7 @@
 
         <!-- GLOBAL MANDATORY STYLES -->
         <link href="http://fonts.googleapis.com/css?family=Hind:300,400,500,600,700" rel="stylesheet" type="text/css">
-        <link href="{{ url_for('static', filename='stylesheets/maintheme/simple-line-icons.css') }}" rel="stylesheet">
+        <!-- <link href="{{ url_for('static', filename='stylesheets/maintheme/simple-line-icons.css') }}" rel="stylesheet"> -->
         <link href="{{ url_for('static', filename='stylesheets/maintheme/vendor/bootstrap/css/bootstrap.min.css') }}" rel="stylesheet">
 
         <!-- PAGE LEVEL PLUGIN STYLES -->
