--- a/web/templates/perfagencytemp/login.html
+++ b/web/templates/perfagencytemp/login.html
@@ -26,13 +26,13 @@
 
                     
                     <span>Username</span>
-					<input class="text" type="text" name="user_name"/>
+					{%block username%}<input class="text" type="text" name="user_name"/>{%endblock%}
 					
                     <br>
 
 					<!--- Please remember to remove print check for password --->
                     <span>Password</span>
-					<input class="text" type="password" name="password"/>
+					{%block password%}<input class="text" type="password" name="password"/>{%endblock%}
                     
                    
 
