--- a/web/templates/main/index.html
+++ b/web/templates/main/index.html
@@ -169,10 +169,72 @@
                         <div class="col-sm-4 sm-margin-b-4">
                             <div class="service" data-height="height">
                                 <div class="service-info">
-                                    <h3>XSS Injection</h3>
+                                    <h3>SQL Timing Attack (Blind Injection)</h3>
+                                    <p class="margin-b-5">Chapter 2</p>
+                                </div>
+                                <a href="/SQL2/login" class="content-wrapper-link"></a>    
+                            </div>
+                        </div>
+                        <div class="col-sm-4 sm-margin-b-4">
+                            <div class="service bg-color-base wow fadeInDown" data-height="height" data-wow-duration=".3" data-wow-delay=".1s">
+                                <div class="service-info">
+                                    <h3 class="color-white">NoSQL Injection</h3>
+                                    <p class="color-white margin-b-5">Chapter 3</p>
+                                </div>
+                                <a href="#" class="content-wrapper-link"></a>    
+                            </div>
+                        </div>
+                    </div>
+                    <!--// end row -->
+                    <div class="row row-space-2">
+                        <div class="col-sm-4 sm-margin-b-4">
+                            <div class="service" data-height="height">
+                                <div class="service-info">
+                                    <h3>XSS (Stored & Reflected)</h3>
                                     <p class="margin-b-5">Chapter 1</p>
                                 </div>
                                 <a href="/XSS/login" class="content-wrapper-link"></a>    
+                            </div>
+                        </div>
+                        <div class="col-sm-4 sm-margin-b-4">
+                            <div class="service" data-height="height">
+                                <div class="service-info">
+                                    <h3>XSS with CSP</h3>
+                                    <p class="margin-b-5">Chapter 2</p>
+                                </div>
+                                <a href="/XSS2" class="content-wrapper-link"></a>    
+                            </div>
+                        </div>
+                        <div class="col-sm-4">
+                            <div class="service bg-color-base wow fadeInDown" data-height="height" data-wow-duration=".3" data-wow-delay=".1s">
+                                <div class="service-info">
+                                    <h3 class="color-white">XSS (TBC)</h3>
+                                    <p class="color-white margin-b-5">Chapter 3</p>
+                                </div>
+                                <a href="#" class="content-wrapper-link"></a>    
+                            </div>
+                        </div>
+                      
+                    </div>
+                    <!--// end row -->
+
+                    <div class="row row-space-2">
+                        <div class="col-sm-4 sm-margin-b-4">
+                            <div class="service bg-color-base wow fadeInDown" data-height="height" data-wow-duration=".3" data-wow-delay=".1s">
+                                <div class="service-info">
+                                    <h3 class="color-white">XXE Injection</h3>
+                                    <p class="color-white margin-b-5">Chapter 1</p>
+                                </div>
+                                <a href="/XXE" class="content-wrapper-link"></a>    
+                            </div>
+                        </div>
+                        <div class="col-sm-4 sm-margin-b-4">
+                            <div class="service" data-height="height">
+                                <div class="service-info">
+                                    <h3>XXE (Blind Injection)</h3>
+                                    <p class="margin-b-5">Chapter 2</p>
+                                </div>
+                                <a href="/XML" class="content-wrapper-link"></a>    
                             </div>
                         </div>
                         <div class="col-sm-4">
@@ -185,70 +247,10 @@
                                 <a href="/INSEC" class="content-wrapper-link"></a>    
                             </div>
                         </div>
+                      
                     </div>
                     <!--// end row -->
 
-                    <div class="row row-space-2">
-                        <div class="col-sm-4 sm-margin-b-4">
-                            <div class="service" data-height="height">
-                                <div class="service-info">
-                                    <h3>SQL Timing Attack (Blind Injection)</h3>
-                                    <p class="margin-b-5">Chapter 2</p>
-                                </div>
-                                <a href="/SQL/chap2/login" class="content-wrapper-link"></a>    
-                            </div>
-                        </div>
-                        <div class="col-sm-4 sm-margin-b-4">
-                            <div class="service bg-color-base wow fadeInDown" data-height="height" data-wow-duration=".3" data-wow-delay=".1s">
-                                <div class="service-info">
-                                    <h3 class="color-white">XXE Injection</h3>
-                                    <p class="color-white margin-b-5">Chapter 2</p>
-                                </div>
-                                <a href="/XXE" class="content-wrapper-link"></a>    
-                            </div>
-                        </div>
-                        <!-- <div class="col-sm-4">
-                            <div class="service" data-height="height">
-                                <div class="service-info">
-                                    <h3>In development...</h3>
-                                    <p class="margin-b-5">Chapter 2</p>
-                                </div>
-                                <a href="#" class="content-wrapper-link"></a>    
-                            </div>
-                        </div> -->
-                    </div>
-                    <!--// end row -->
-
-                    <div class="row row-space-2">
-                        <div class="col-sm-4 sm-margin-b-4">
-                            <div class="service" data-height="height">
-                                <div class="service-info">
-                                    <h3>XML (Blind Injection)</h3>
-                                    <p class="margin-b-5">Chapter 3</p>
-                                </div>
-                                <a href="/XML" class="content-wrapper-link"></a>    
-                            </div>
-                        </div>
-                        <!-- <div class="col-sm-4 sm-margin-b-4">
-                            <div class="service" data-height="height">
-                                <div class="service-info">
-                                    <h3>In development...</h3>
-                                    <p class="margin-b-5">Chapter 3</p>
-                                </div>
-                                <a href="#" class="content-wrapper-link"></a>    
-                            </div>
-                        </div>
-                        <div class="col-sm-4">
-                            <div class="service" data-height="height">
-                                <div class="service-info">
-                                    <h3>In development...</h3>
-                                    <p class="margin-b-5">Chapter 3</p>
-                                </div>
-                                <a href="#" class="content-wrapper-link"></a>    
-                            </div>
-                        </div> -->
-                    </div>
-                    <!--// end row -->
                 </div>
             </div>
         </div>
