Added new xss ctf

--- a/web/templates/main/index.html
+++ b/web/templates/main/index.html
@@ -199,7 +199,7 @@
                         <div class="col-sm-4 sm-margin-b-4">
                             <div class="service bg-color-base wow fadeInDown" data-height="height" data-wow-duration=".3" data-wow-delay=".1s">
                                 <div class="service-info">
-                                    <h3 class="color-white">XSS with CSP</h3>
+                                    <h3 class="color-white">XSS with Content-Security-Policy (Low)</h3>
                                     <p class="margin-b-5 color-white">Chapter 2</p>
                                 </div>
                                 <a href="/XSS2" class="content-wrapper-link"></a>    
@@ -208,10 +208,10 @@
                         <div class="col-sm-4">
                             <div class="service bg-color-base wow fadeInDown" data-height="height" data-wow-duration=".3" data-wow-delay=".1s">
                                 <div class="service-info">
-                                    <h3 class="color-white">XSS (TBC)</h3>
+                                    <h3 class="color-white">XSS with Content-Security-Policy (High)</h3>
                                     <p class="color-white margin-b-5">Chapter 3</p>
                                 </div>
-                                <a href="#" class="content-wrapper-link"></a>    
+                                <a href="/XSS3" class="content-wrapper-link"></a>    
                             </div>
                         </div>
                       
