--- a/web/static/stylesheets/nature/homepage.css
+++ b/web/static/stylesheets/nature/homepage.css
@@ -77,3 +77,16 @@ body {
 
     
 }
+
+
+.subheader {
+
+    font-size: 20px;
+    margin-top: 25px;
+    color: black;
+}
+
+.feedback {
+
+    overflow-wrap: anywhere;
+}
