--- a/web/templates/nature/base.html
+++ b/web/templates/nature/base.html
@@ -10,6 +10,7 @@
     <script src="{{ url_for('static', filename='scripts/sidebar.js') }}"></script>  
 
     <link rel="stylesheet" href="{{ url_for('static', filename='stylesheets/sidebar/style.css') }}">
+    {%block meta%}{%endblock%}
 
 </head>
 <body>
